dhsq/Source/Antlr.AutoGen/DhsqParser.cs
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 ..\\Source\\Antlr.Grammars\\Dhsq.g 2009-03-31 01:32:01

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections;
using System.Collections.Generic;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

namespace  Motorola.PublicSafety.Platform.DHStore.Compiler 
{
public partial class DhsqParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"ALL", 
		"FIELDS", 
		"FIELD", 
		"CONDITIONS", 
		"CONDITION", 
		"COMMA", 
		"TSTRING", 
		"INT", 
		"ID", 
		"DOT", 
		"SQUOTE", 
		"CHAR", 
		"DIGIT", 
		"LC", 
		"UC", 
		"NEWLINE", 
		"WS", 
		"COMMENT", 
		"LINECOMMENT", 
		"SEMICOLON", 
		"COLON", 
		"'delete'", 
		"'insert'", 
		"'update'", 
		"'from'", 
		"'select'", 
		"'where'", 
		"'*'", 
		"'as'", 
		"'('", 
		"')'", 
		"'and'", 
		"'or'", 
		"'='", 
		"'<'", 
		"'>'", 
		"'!='", 
		"'<='", 
		"'=>'", 
		"'like'"
    };

    public const int T__29 = 29;
    public const int T__28 = 28;
    public const int T__27 = 27;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int CHAR = 15;
    public const int CONDITION = 8;
    public const int LINECOMMENT = 22;
    public const int ID = 12;
    public const int EOF = -1;
    public const int COMMA = 9;
    public const int ALL = 4;
    public const int UC = 18;
    public const int DIGIT = 16;
    public const int DOT = 13;
    public const int COMMENT = 21;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int INT = 11;
    public const int SEMICOLON = 23;
    public const int FIELDS = 5;
    public const int SQUOTE = 14;
    public const int CONDITIONS = 7;
    public const int COLON = 24;
    public const int T__30 = 30;
    public const int T__31 = 31;
    public const int T__32 = 32;
    public const int T__33 = 33;
    public const int WS = 20;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int NEWLINE = 19;
    public const int T__36 = 36;
    public const int TSTRING = 10;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int LC = 17;
    public const int FIELD = 6;

    // delegates
    // delegators



        public DhsqParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public DhsqParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return DhsqParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "..\\Source\\Antlr.Grammars\\Dhsq.g"; }
    }


    	Stack paraphrases = new Stack();
    	public override String GetErrorMessage(RecognitionException e, String[] tokenNames){
    		String msg = base.GetErrorMessage(e, tokenNames);
    		if (paraphrases.Count > 0){
    			msg = msg + " " + paraphrases.Peek();
    		}
    		return msg;
    	}


    public class query_return : ParserRuleReturnScope
    {
        public IStatement StatementValue;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "query"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:47:1: query returns [IStatement StatementValue] : (s= select | insert | update | delete | EOF );
    public DhsqParser.query_return query() // throws RecognitionException [1]
    {   
        DhsqParser.query_return retval = new DhsqParser.query_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken EOF4 = null;
        DhsqParser.select_return s = default(DhsqParser.select_return);

        DhsqParser.insert_return insert1 = default(DhsqParser.insert_return);

        DhsqParser.update_return update2 = default(DhsqParser.update_return);

        DhsqParser.delete_return delete3 = default(DhsqParser.delete_return);


        CommonTree EOF4_tree=null;

        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:49:2: (s= select | insert | update | delete | EOF )
            int alt1 = 5;
            switch ( input.LA(1) ) 
            {
            case 28:
            	{
                alt1 = 1;
                }
                break;
            case 26:
            	{
                alt1 = 2;
                }
                break;
            case 27:
            	{
                alt1 = 3;
                }
                break;
            case 25:
            	{
                alt1 = 4;
                }
                break;
            case EOF:
            	{
                alt1 = 5;
                }
                break;
            	default:
            	    NoViableAltException nvae_d1s0 =
            	        new NoViableAltException("", 1, 0, input);

            	    throw nvae_d1s0;
            }

            switch (alt1) 
            {
                case 1 :
                    // ..\\Source\\Antlr.Grammars\\Dhsq.g:49:5: s= select
                    {
                    	root_0 = (CommonTree)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_select_in_query112);
                    	s = select();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, s.Tree);
                    	 retval.StatementValue =  ((s != null) ? s.SelectValue : default(SelectStatement)); 

                    }
                    break;
                case 2 :
                    // ..\\Source\\Antlr.Grammars\\Dhsq.g:50:5: insert
                    {
                    	root_0 = (CommonTree)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_insert_in_query120);
                    	insert1 = insert();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, insert1.Tree);

                    }
                    break;
                case 3 :
                    // ..\\Source\\Antlr.Grammars\\Dhsq.g:51:5: update
                    {
                    	root_0 = (CommonTree)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_update_in_query126);
                    	update2 = update();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, update2.Tree);

                    }
                    break;
                case 4 :
                    // ..\\Source\\Antlr.Grammars\\Dhsq.g:52:5: delete
                    {
                    	root_0 = (CommonTree)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_delete_in_query132);
                    	delete3 = delete();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, delete3.Tree);

                    }
                    break;
                case 5 :
                    // ..\\Source\\Antlr.Grammars\\Dhsq.g:53:5: EOF
                    {
                    	root_0 = (CommonTree)adaptor.GetNilNode();

                    	EOF4=(IToken)Match(input,EOF,FOLLOW_EOF_in_query138); 
                    		EOF4_tree = (CommonTree)adaptor.Create(EOF4);
                    		adaptor.AddChild(root_0, EOF4_tree);


                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
            Compiler.CheckErrors();
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "query"

    public class delete_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "delete"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:56:1: delete : 'delete' ;
    public DhsqParser.delete_return delete() // throws RecognitionException [1]
    {   
        DhsqParser.delete_return retval = new DhsqParser.delete_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal5 = null;

        CommonTree string_literal5_tree=null;

        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:57:2: ( 'delete' )
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:57:4: 'delete'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	string_literal5=(IToken)Match(input,25,FOLLOW_25_in_delete150); 
            		string_literal5_tree = (CommonTree)adaptor.Create(string_literal5);
            		adaptor.AddChild(root_0, string_literal5_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "delete"

    public class insert_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "insert"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:60:1: insert : 'insert' ;
    public DhsqParser.insert_return insert() // throws RecognitionException [1]
    {   
        DhsqParser.insert_return retval = new DhsqParser.insert_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal6 = null;

        CommonTree string_literal6_tree=null;

        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:61:2: ( 'insert' )
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:61:4: 'insert'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	string_literal6=(IToken)Match(input,26,FOLLOW_26_in_insert162); 
            		string_literal6_tree = (CommonTree)adaptor.Create(string_literal6);
            		adaptor.AddChild(root_0, string_literal6_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "insert"

    public class update_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "update"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:64:1: update : 'update' ;
    public DhsqParser.update_return update() // throws RecognitionException [1]
    {   
        DhsqParser.update_return retval = new DhsqParser.update_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal7 = null;

        CommonTree string_literal7_tree=null;

        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:65:2: ( 'update' )
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:65:4: 'update'
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	string_literal7=(IToken)Match(input,27,FOLLOW_27_in_update174); 
            		string_literal7_tree = (CommonTree)adaptor.Create(string_literal7);
            		adaptor.AddChild(root_0, string_literal7_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "update"

    public class select_return : ParserRuleReturnScope
    {
        public SelectStatement SelectValue;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "select"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:68:1: select returns [SelectStatement SelectValue] : 'from' i= id 'select' f= fields ( 'where' e= expression )? ;
    public DhsqParser.select_return select() // throws RecognitionException [1]
    {   
        DhsqParser.select_return retval = new DhsqParser.select_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken string_literal8 = null;
        IToken string_literal9 = null;
        IToken string_literal10 = null;
        DhsqParser.id_return i = default(DhsqParser.id_return);

        DhsqParser.fields_return f = default(DhsqParser.fields_return);

        DhsqParser.expression_return e = default(DhsqParser.expression_return);


        CommonTree string_literal8_tree=null;
        CommonTree string_literal9_tree=null;
        CommonTree string_literal10_tree=null;


        	retval.SelectValue =  new SelectStatement(); 

        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:73:2: ( 'from' i= id 'select' f= fields ( 'where' e= expression )? )
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:73:4: 'from' i= id 'select' f= fields ( 'where' e= expression )?
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	string_literal8=(IToken)Match(input,28,FOLLOW_28_in_select196); 
            		string_literal8_tree = (CommonTree)adaptor.Create(string_literal8);
            		adaptor.AddChild(root_0, string_literal8_tree);

            	PushFollow(FOLLOW_id_in_select208);
            	i = id();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, i.Tree);
            	 retval.SelectValue.SourceId = i.Id; 
            	string_literal9=(IToken)Match(input,29,FOLLOW_29_in_select217); 
            		string_literal9_tree = (CommonTree)adaptor.Create(string_literal9);
            		adaptor.AddChild(root_0, string_literal9_tree);

            	PushFollow(FOLLOW_fields_in_select223);
            	f = fields();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, f.Tree);
            	 retval.SelectValue.Fields = f.FieldsValue;
            	// ..\\Source\\Antlr.Grammars\\Dhsq.g:76:6: ( 'where' e= expression )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == 30) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // ..\\Source\\Antlr.Grammars\\Dhsq.g:76:7: 'where' e= expression
            	        {
            	        	string_literal10=(IToken)Match(input,30,FOLLOW_30_in_select233); 
            	        		string_literal10_tree = (CommonTree)adaptor.Create(string_literal10);
            	        		adaptor.AddChild(root_0, string_literal10_tree);

            	        	PushFollow(FOLLOW_expression_in_select237);
            	        	e = expression();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, e.Tree);
            	        	 retval.SelectValue.Where = e.ExpressionValue; 

            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "select"

    public class fields_return : ParserRuleReturnScope
    {
        public List<Field> FieldsValue;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "fields"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:79:1: fields returns [List<Field> FieldsValue] : ( '*' | f= field ( COMMA f= field )* );
    public DhsqParser.fields_return fields() // throws RecognitionException [1]
    {   
        DhsqParser.fields_return retval = new DhsqParser.fields_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal11 = null;
        IToken COMMA12 = null;
        DhsqParser.field_return f = default(DhsqParser.field_return);


        CommonTree char_literal11_tree=null;
        CommonTree COMMA12_tree=null;


        	retval.FieldsValue =  new List<Field>(); 

        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:84:2: ( '*' | f= field ( COMMA f= field )* )
            int alt4 = 2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0 == 31) )
            {
                alt4 = 1;
            }
            else if ( (LA4_0 == TSTRING) )
            {
                alt4 = 2;
            }
            else 
            {
                NoViableAltException nvae_d4s0 =
                    new NoViableAltException("", 4, 0, input);

                throw nvae_d4s0;
            }
            switch (alt4) 
            {
                case 1 :
                    // ..\\Source\\Antlr.Grammars\\Dhsq.g:84:4: '*'
                    {
                    	root_0 = (CommonTree)adaptor.GetNilNode();

                    	char_literal11=(IToken)Match(input,31,FOLLOW_31_in_fields262); 
                    		char_literal11_tree = (CommonTree)adaptor.Create(char_literal11);
                    		adaptor.AddChild(root_0, char_literal11_tree);

                    	 retval.FieldsValue.Add(new Field(){ XPath=string.Empty, Alias=new Identifier(){ Name="ALL" } } ); 

                    }
                    break;
                case 2 :
                    // ..\\Source\\Antlr.Grammars\\Dhsq.g:85:4: f= field ( COMMA f= field )*
                    {
                    	root_0 = (CommonTree)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_field_in_fields271);
                    	f = field();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, f.Tree);
                    	 
                    				retval.FieldsValue.Add(f.FieldValue); 
                    			
                    	// ..\\Source\\Antlr.Grammars\\Dhsq.g:89:3: ( COMMA f= field )*
                    	do 
                    	{
                    	    int alt3 = 2;
                    	    int LA3_0 = input.LA(1);

                    	    if ( (LA3_0 == COMMA) )
                    	    {
                    	        alt3 = 1;
                    	    }


                    	    switch (alt3) 
                    		{
                    			case 1 :
                    			    // ..\\Source\\Antlr.Grammars\\Dhsq.g:89:4: COMMA f= field
                    			    {
                    			    	COMMA12=(IToken)Match(input,COMMA,FOLLOW_COMMA_in_fields281); 
                    			    		COMMA12_tree = (CommonTree)adaptor.Create(COMMA12);
                    			    		adaptor.AddChild(root_0, COMMA12_tree);

                    			    	PushFollow(FOLLOW_field_in_fields285);
                    			    	f = field();
                    			    	state.followingStackPointer--;

                    			    	adaptor.AddChild(root_0, f.Tree);

                    			    				retval.FieldsValue.Add(f.FieldValue); 
                    			    			

                    			    }
                    			    break;

                    			default:
                    			    goto loop3;
                    	    }
                    	} while (true);

                    	loop3:
                    		;	// Stops C# compiler whining that label 'loop3' has no statements


                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "fields"

    public class field_return : ParserRuleReturnScope
    {
        public Field FieldValue;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "field"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:95:1: field returns [Field FieldValue] : p= TSTRING ( 'as' i= id )? ;
    public DhsqParser.field_return field() // throws RecognitionException [1]
    {   
        DhsqParser.field_return retval = new DhsqParser.field_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken p = null;
        IToken string_literal13 = null;
        DhsqParser.id_return i = default(DhsqParser.id_return);


        CommonTree p_tree=null;
        CommonTree string_literal13_tree=null;


        	retval.FieldValue =  new Field(); 

        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:100:2: (p= TSTRING ( 'as' i= id )? )
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:100:4: p= TSTRING ( 'as' i= id )?
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	p=(IToken)Match(input,TSTRING,FOLLOW_TSTRING_in_field317); 
            		p_tree = (CommonTree)adaptor.Create(p);
            		adaptor.AddChild(root_0, p_tree);

            	 retval.FieldValue.XPath = p.Text; 
            	// ..\\Source\\Antlr.Grammars\\Dhsq.g:100:46: ( 'as' i= id )?
            	int alt5 = 2;
            	int LA5_0 = input.LA(1);

            	if ( (LA5_0 == 32) )
            	{
            	    alt5 = 1;
            	}
            	switch (alt5) 
            	{
            	    case 1 :
            	        // ..\\Source\\Antlr.Grammars\\Dhsq.g:100:47: 'as' i= id
            	        {
            	        	string_literal13=(IToken)Match(input,32,FOLLOW_32_in_field322); 
            	        		string_literal13_tree = (CommonTree)adaptor.Create(string_literal13);
            	        		adaptor.AddChild(root_0, string_literal13_tree);

            	        	PushFollow(FOLLOW_id_in_field326);
            	        	i = id();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, i.Tree);
            	        	 retval.FieldValue.Alias = i.Id; 

            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "field"

    public class expression_return : ParserRuleReturnScope
    {
        public Expression ExpressionValue;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "expression"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:103:1: expression returns [Expression ExpressionValue] : e1= logicExpression (o= logic e2= logicExpression )* ;
    public DhsqParser.expression_return expression() // throws RecognitionException [1]
    {   
        DhsqParser.expression_return retval = new DhsqParser.expression_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        DhsqParser.logicExpression_return e1 = default(DhsqParser.logicExpression_return);

        DhsqParser.logic_return o = default(DhsqParser.logic_return);

        DhsqParser.logicExpression_return e2 = default(DhsqParser.logicExpression_return);



        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:104:2: (e1= logicExpression (o= logic e2= logicExpression )* )
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:104:4: e1= logicExpression (o= logic e2= logicExpression )*
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_logicExpression_in_expression349);
            	e1 = logicExpression();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, e1.Tree);

            				retval.ExpressionValue =  e1.ExpressionValue; 
            			
            	// ..\\Source\\Antlr.Grammars\\Dhsq.g:108:3: (o= logic e2= logicExpression )*
            	do 
            	{
            	    int alt6 = 2;
            	    int LA6_0 = input.LA(1);

            	    if ( ((LA6_0 >= 35 && LA6_0 <= 36)) )
            	    {
            	        alt6 = 1;
            	    }


            	    switch (alt6) 
            		{
            			case 1 :
            			    // ..\\Source\\Antlr.Grammars\\Dhsq.g:109:4: o= logic e2= logicExpression
            			    {
            			    	PushFollow(FOLLOW_logic_in_expression365);
            			    	o = logic();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, o.Tree);
            			    	PushFollow(FOLLOW_logicExpression_in_expression369);
            			    	e2 = logicExpression();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, e2.Tree);

            			    					retval.ExpressionValue =  new LogicExpression()
            			    					{ Left=e1.ExpressionValue, Operator=o.Operator, Right=e2.ExpressionValue }; 
            			    				

            			    }
            			    break;

            			default:
            			    goto loop6;
            	    }
            	} while (true);

            	loop6:
            		;	// Stops C# compiler whining that label 'loop6' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "expression"

    public class logicExpression_return : ParserRuleReturnScope
    {
        public Expression ExpressionValue;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "logicExpression"
    // ..\\Source\\Antlr.Grammars\\Dhsq.g:117:1: logicExpression returns [Expression ExpressionValue] : (l= left o= op r= right | '(' e= expression ')' );
    public DhsqParser.logicExpression_return logicExpression() // throws RecognitionException [1]
    {   
        DhsqParser.logicExpression_return retval = new DhsqParser.logicExpression_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal14 = null;
        IToken char_literal15 = null;
        DhsqParser.left_return l = default(DhsqParser.left_return);

        DhsqParser.op_return o = default(DhsqParser.op_return);

        DhsqParser.right_return r = default(DhsqParser.right_return);

        DhsqParser.expression_return e = default(DhsqParser.expression_return);


        CommonTree char_literal14_tree=null;
        CommonTree char_literal15_tree=null;

        try 
    	{
            // ..\\Source\\Antlr.Grammars\\Dhsq.g:118:2: (l= left o= op r= right | '(' e= expression ')' )
            int alt7 = 2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0 == TSTRING || LA7_0 == ID) )
            {
                alt7 = 1;
            }
            else if ( (LA7_0 == 33) )
            {
                alt7 = 2;
            }
            else 
            {
                NoViableAltException nvae_d7s0 =
                    new NoViableAltException("", 7, 0, input);

